# android_kernel_samsung_gta9-modules

./: Android.bp
connectivity/bt/mt66xx/: BUILD.bazel  Makefile
connectivity/bt/mt66xx/btif/: Kbuild  btmtk_btif_main.c
connectivity/bt/mt66xx/wmt/: BUILD.bazel  Kbuild  Makefile
connectivity/conninfra/conn_drv/connv2/debug_utility/: conninfra_dbg.c
connectivity/conninfra/conn_drv/connv2/platform/mt6878/: mt6878_pmic.c  mt6878_pos.c
connectivity/fmradio/: Kbuild  Makefile
connectivity/gps/: Makefile
connectivity/gps/data_link/: Makefile
connectivity/gps/data_link/hal/: gps_dl_power_ctrl.c
connectivity/gps/data_link/hw/: gps_dl_hw_atf_conn_infra.c  gps_dl_hw_conn_infra.c
connectivity/gps/data_link/hw/inc/: gps_dl_hw_api.h  gps_dl_hw_atf.h  gps_dl_hw_dep_api.h
connectivity/gps/data_link/lib/: gps_dl_dma_buf.c
connectivity/gps/data_link/link/: gps_dl_link_event_proc.c
connectivity/gps/data_link/linux/: gps_dl_linux_plat_drv.c  gps_each_device.c
connectivity/gps/data_link/plat/v010/: BUILD.bazel
connectivity/gps/data_link/plat/v010/inc/: gps_dl_config.h
connectivity/gps/data_link/plat/v030/: BUILD.bazel
connectivity/gps/data_link/plat/v030/inc/: gps_dl_config.h
connectivity/gps/data_link/plat/v050/: BUILD.bazel  gps_dl_hw_dep_bgf.c  gps_dl_hw_dep_gps.c  gps_dl_hw_dep_macro.h
connectivity/gps/data_link/plat/v050/inc/: gps_dl_config.h
connectivity/gps/data_link/plat/v051/: BUILD.bazel  gps_dl_hw_dep_bgf.c  gps_dl_hw_dep_gps.c  gps_dl_hw_dep_macro.h
connectivity/gps/data_link/plat/v051/inc/: gps_dl_config.h
connectivity/gps/data_link/plat/v060/: BUILD.bazel  Makefile  gps_dl_hw_dep_bgf.c  gps_dl_hw_dep_gps.c
connectivity/gps/data_link/plat/v060/inc/: gps_dl_config.h
connectivity/gps/data_link/plat/v061/: BUILD.bazel  Kbuild  gps_dl_hw_dep_bgf.c  gps_dl_hw_dep_gps.c  gps_dl_hw_dep_macro.h
connectivity/gps/data_link/plat/v061/inc/: gps_dl_config.h
connectivity/gps/data_link/plat/v062/: BUILD.bazel  Kbuild  gps_dl_hw_dep_adie_ctrl_v062_1.c  gps_dl_hw_dep_bgf.c  gps_dl_hw_dep_gps.c  gps_dl_hw_dep_macro.h
connectivity/gps/data_link/plat/v062/inc/: gps_dl_config.h
connectivity/gps/gps_mcudl/hal/: gps_mcudl_hal_conn.c
connectivity/gps/gps_mcudl/hal/inc/: gps_mcudl_hal_conn.h
connectivity/gps/gps_mcudl/plat/: gps_mcudl_plat_dedicated_mcu.c
connectivity/gps/gps_mcudl/xlink/: gps_mcudl_reset.c
connectivity/gps/gps_scp/: gps2scp.c
connectivity/gps/gps_stp/: BUILD.bazel  Makefile  stp_chrdev_gps.c
connectivity/wlan/adaptor/: Kbuild  Makefile  fw_log_wifi.c  fw_log_wifi.h  wmt_cdev_wifi.c
connectivity/wlan/core/gen4m/: Android.mk  Kbuild  Makefile
connectivity/wlan/core/gen4m/common/: wlan_oid.c
connectivity/wlan/core/gen4m/include/: config.h
connectivity/wlan/core/gen4m/include/mgmt/: rlm_txpwr_init.h
connectivity/wlan/core/gen4m/mgmt/: rsn.c
connectivity/wlan/core/gen4m/os/linux/: gl_init.c  gl_sys.c
gpu/: Makefile
met_drv_v3/: BUILD.bazel  Kbuild
met_drv_v3/common/: Kbuild  core_plf_init.c  mtk_emi_bm.c  mtk_emi_bm.h  v7_pmu_hw.c
met_drv_v3/common/tinysys/v1/: tinysys_common.h
met_drv_v3/met_api/: BUILD.bazel  Makefile
met_drv_v3/met_api/met_backlight_api/: Makefile
met_drv_v3/met_api/met_emi_api/: Makefile
met_drv_v3/met_api/met_sspm_api/: Makefile
met_drv_v3/met_api/met_vcore_api/: Makefile
(+5 files in other folders)
