load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ko(
    name = "gps_drv_stp",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
        "**/Makefile",
    ]) + [
        "//gta9-modules/connectivity/common:headers",
    ],
    deps = [
        "//gta9-modules/connectivity/common:wmt_drv",
    ],
)
