load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ko(
    name = "wmt",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
        "**/Makefile",
    ]) + [
        "//gta9-modules/connectivity/bt/mt66xx:headers",
        "//gta9-modules/connectivity/common:headers",
    ],
    outs = [
        "bt_drv_connac1x.ko",
    ],
    deps = [
        "//gta9-modules/connectivity/common:wmt_drv",
    ],
)
