load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ko(
    name = "gps_drv_dl_v030",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
        "**/Makefile",
    ]) + [
        "//gta9-modules/connectivity/gps:sources",
        "//gta9-modules/connectivity/gps/data_link:sources",
        "//gta9-modules/connectivity/conninfra:headers",
    ],
    deps = [
        "//gta9-modules/connectivity/conninfra:conninfra",
    ],
)
